first playable Version

--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,4 +1,4 @@
 <div class="start-screen">
-    <img src="./../../assets/img/roflogo.png">
+    <img src="assets/img/roflogo.png">
     <div (click)="newGame()" class="start-btn">Start Game</div>
 </div>
