--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Caveat;
-    src: url(./../../assets/font/Caveat/Caveat-VariableFont_wght.ttf);
+    src: url(/assets/font/Caveat/Caveat-VariableFont_wght.ttf);
 }
 
 .start-screen{
